MODAUD-240 Ignore modification in 999ff